--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -835,13 +835,13 @@
         title[i] = commandId[i] + "o";
         // trim determination using the MLP measurement
         if (title[i].startsWith("SW")) {
-          customLevel[i] = await getSubTrim(i);
+          customLevel[i] = await getSubTrim(indices[0]);
         }
         else {
-          customLevel[i] = await getSpeakerTrim(i);
+          customLevel[i] = await getSpeakerTrim(indices[0]);
         }
         // level match all other positions to MLP & average
-        await alignVol2MLP(indices, i);
+        await alignVol2MLP(indices, indices[0]);
         if (indices.length === 1) {
           await postSafe(`${baseUrl}/${i}/command`, {command: "Response copy" }, "Completed"); // nothing to average
         }
