--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -845,7 +845,7 @@
         // level match all other positions to MLP & average
         await alignVol2MLP(indices, indices[0]); // idx 0 is MLP since everything's sorted
         if (indices.length === 1) {
-          await postSafe(`${baseUrl}/${i}/command`, {command: "Response copy" }, "Completed"); // nothing to average
+          await postSafe(`${baseUrl}/${indices[0]}/command`, {command: "Response copy" }, "Completed"); // nothing to average
         }
         else {
           await postNext('Magn plus phase average', indices); // do not use VA, it reduces SPL!
