--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -844,7 +844,9 @@
           customLevel[i] = await getSpeakerTrim(indices[0]);
         }
         // attempt to fix android volume bug where measurements are off by +/-6dB
-        await fixVolBug(indices);
+        if (isCirrusLogic) {
+          await fixVolBug(indices);
+        }
         // average
         if (indices.length === 1) {
           await postSafe(`${baseUrl}/${indices[0]}/command`, {command: "Response copy" }, "Completed"); // nothing to average
